--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -4,6 +4,10 @@ ul {
   list-style-type: none;
   margin: 0;
 }
+textarea:focus,
+input:focus {
+  outline: none;
+}
 
 /* generic styles */
 * {
@@ -15,16 +19,4 @@ body {
   margin: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
-.title {
-  font-weight: 700;
-  font-size: 24px;
-  margin: 30px 0 30px 30px;
-  color: white;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-.main-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
 }
