--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -35,7 +35,7 @@
 .login-input {
   border: none;
   width: calc(100% - 20px);
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   height: 35px;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 5px;
@@ -43,15 +43,16 @@
   color: white;
   font-weight: 700;
 }
+.username-login-input {
+  margin-bottom: 20px;
+}
 .login-input::placeholder {
   font-size: 12px;
   color: rgb(255, 255, 255, 0.6);
 }
 
-.login-btn {
-  margin-top: 20px;
-}
 .login-form button {
+  margin-top: 40px;
   width: 60vw;
   max-width: 180px;
   height: 35px;
@@ -61,6 +62,24 @@
   border: none;
 }
 .login-form p {
+  margin: 0;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.37);
+  width: 100%;
+  text-align: left;
+}
+.login-form a {
+  text-decoration: underline;
+  color: rgba(0, 0, 255, 0.466);
   width: 100%;
   text-align: center;
+}
+
+@media (min-width: 500px) and (hover: hover) {
+  .login-form button:hover {
+    cursor: pointer;
+  }
+  .login-form a:hover {
+    cursor: pointer;
+  }
 }
