--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -62,7 +62,7 @@
   border: none;
 }
 .login-form p {
-  margin: 0;
+  margin: 0 0 0 15px;
   font-size: 12px;
   color: rgba(0, 0, 0, 0.37);
   width: 100%;
